# bt

./: .coveragerc  .gitignore  .travis.yml  Buy_and_hold.html  ERC.html  Fixed_Income.html  LICENSE  MANIFEST.in  Makefile  PTE.html  README.md  README.rst  Strategy_Combination.html  Target_Volatility.html  Trend_1.html  Trend_2.html  algos.html  bt.html  examples-nb.html  examples.html  genindex.html  index.html  install.html  intro.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tree.html
.github/: dependabot.yaml
.github/workflows/: build.yaml  build.yml  deploy.yaml  deploy.yml  regression.yaml  regression.yml
_modules/: index.html
_modules/bt/: algos.html  backtest.html  core.html
_modules/klink/: __init__.html  demo.html
_sources/: Fixed_Income.rst.txt  Target_Volatility.rst.txt  Trend_1.rst.txt  algos.txt  examples-nb.rst.txt  examples-nb.txt  index.txt  install.txt  intro.rst.txt  modules.rst.txt  tree.rst.txt
_static/: documentation_options.js
_static/css/: klink.css
_themes/klink/: README.html
bt/: __init__.py  algos.py  backtest.py  core.py
docs/: Makefile  make.bat
docs/source/: Buy_and_hold.ipynb  Buy_and_hold.rst  Cost_Models.rst  ERC.ipynb  ERC.rst  Fixed_Income.ipynb  Fixed_Income.rst  PTE.ipynb  PTE.rst  Strategy_Combination.ipynb  Strategy_Combination.rst  Target_Volatility.ipynb  Target_Volatility.rst  Trend_1.ipynb  Trend_1.rst  Trend_2.ipynb  Trend_2.rst  algos.rst  bt.rst  conf.py  conf.py.bak  convertnb.py  examples-nb.ipynb  examples-nb.rst  examples.rst  index.rst  install.rst  intro.ipynb  intro.rst  nb-examples.rst  (+2 more)
examples/: ERC.ipynb  PTE.ipynb  Strategy_Combination.ipynb  Target_Volatility.ipynb  buy_and_hold.ipynb  buy_and_hold.py  calmar_ratio_example.py  cost_models.ipynb  fixed_income.ipynb  pairs_trading.py  trend.ipynb  trend2.ipynb  trend_1.ipynb  trend_2.ipynb
klink/: __init__.py  demo.py  layout.html
tests/: bench.py  test_algos.py  test_backtest.py  test_core.py  test_performance.py
(+40 files in other folders)
