[build-system]
requires = ["hatchling", "hatch-cython", "Cython>=0.29.25", "setuptools"]
build-backend = "hatchling.build"

[project]
name = "bt"
version = "1.2.0"
description = "A flexible backtesting framework for Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Philippe Morissette", email = "morissette.philippe@gmail.com" },
]
keywords = [
    "python",
    "finance",
    "quant",
    "backtesting",
    "strategies",
    "algotrading",
    "algorithmic",
    "trading",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "ffn>=1.1.2",
    "pyprind>=2.11",
    "tqdm>=4",
]

[project.optional-dependencies]
dev = [
    "cython>=0.29.25",
    "ffn>=1.1.2",
    "matplotlib>=2",
    "numpy>=1",
    "pandas>=0.19",
    "pyprind>=2.11",
    "pytest",
    "pytest-cov",
    "ruff>=0.5.0,<0.16",
    "twine",
    "wheel",
]

[project.urls]
Homepage = "https://github.com/pmorissette/bt"

[tool.hatch.build.targets.sdist]
include = [
    "/bt",
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["bt"]
artifacts = [
    "bt/*.so",
    "bt/*.pyd",
    "bt/*.dylib",
]

[tool.hatch.build.targets.wheel.hooks.cython]
dependencies = ["hatch-cython"]

[tool.hatch.build.targets.wheel.hooks.cython.options.files]
targets = ["*/core.py"]
exclude = [
    "*/__init__.py",
    "*/algos.py",
    "*/backtest.py",
]

[tool.ruff]
line-length = 180

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
